fix: part of stats could be invisible if numbers too large (#136)

--- a/src/components/ShipStatistics/ShipStatistics.module.css
+++ b/src/components/ShipStatistics/ShipStatistics.module.css
@@ -39,6 +39,7 @@
 .line > span {
   flex: 1;
   margin: 0px 5px;
+  white-space: nowrap;
 }
 
 .statistic {
